fixed spacing, added borders

--- a/assets/style.css
+++ b/assets/style.css
@@ -77,7 +77,6 @@ footer{
        margin: 0 20px;
        position: relative;
         
-        
     }
     footer nav ul li a{
         text-decoration: none;
@@ -96,9 +95,8 @@ footer{
 
 .hero{
     width: 100%;
-    height: 40vh;
+    height: 30vh;
     background-image: url("./images/Mc8kW4x9Q3aRR3RkP5Im_IMG_4417.jpg") ;  
-    background-position: center;
     align-items: flex-start;
 }
 .hero h3{
@@ -108,7 +106,7 @@ background-color: rgb(140, 231, 243);
 margin-top: 0px;
 }
 .my-image{
-    position: sticky;
+   position:absolute;
     top: 140px;
     left:20px;
     border: 4px rgb(46, 46, 46) solid ;
@@ -131,7 +129,6 @@ color: rgb(46, 46, 46);
 .border{
     border-left: 3px solid;
     height: 100px;
-   
     color: rgb(46, 46, 46);
 }
 .intro h2{
@@ -145,7 +142,7 @@ color: rgb(46, 46, 46);
    
 }
 .intro p{
-    font-size: large;
+    font-size: x-large;
     text-align: left;
     line-height: 1;
     margin-left: 30px;
@@ -156,10 +153,11 @@ color: rgb(46, 46, 46);
     font-size: x-large;
     
 }
+
 .work h2{
     font-size: xx-large;
     color: rgb(46, 46, 46);
-    padding-left: 20px;
+    padding-right: 250px;
     width: 40%;
 }
 .flex-row{
@@ -168,37 +166,21 @@ color: rgb(46, 46, 46);
 }
 .flex-left-2{
     display: flex;
- 
   flex-wrap: wrap;
   align-items: center;
 }
-.border-2{
-    border-left: 3px solid;
-    height: 100px;
-    color: rgb(46, 46, 46);
-}
+
 .container-1{
     display: flex;
     flex-wrap: wrap;
-    margin: 50px auto;
+    
     padding-bottom: 50px;
     justify-content: space-around;
    align-items: center;
-   margin-left: 215px;
+   margin:50px 0 0 100px;
    width: 80%;
- 
   
 }
-.images-1 {
-    
-   
-    background-color: rgb(127, 229, 255);
-}
-.images-1:hover{
-opacity: .5;
-}
-
-
 
 .images-1{
 
@@ -206,14 +188,19 @@ opacity: .5;
     margin-bottom: 25px;
     margin-right: 200px;
     align-items: center;
+    border: 4px rgb(140, 231, 243) solid ;
     
     
 }
+.images-1:hover{
+    opacity: .5;
+    }
 
 
 .images-2{
     background-color: rgb(127, 229, 255);
     margin-bottom: 25px;
+    border: 4px rgb(140, 231, 243) solid ;
 
 }
 .images-2:hover{
@@ -246,8 +233,6 @@ opacity: .5;
 /*responsive for mobile deviced*/
 @media screen and (max-width: 980px) {
     header {
-      padding-bottom: 0;
-      
       justify-content: center;
     }
   
@@ -281,22 +266,55 @@ opacity: .5;
     .images-1 img{
         justify-content: center;
         width: 100%;
-        height:50%
+        height:50%;
+    
     }
     .images-2 img{
+        display: flex;
+        flex-direction: row;
         justify-content: center;
-        width: 100%;
-        height: 50%;
-    }
-    .intro p{
-        font-size: small;
-    
-    }
-    .work h2 {
+        width: 350px;
+        height: 150px;
         
     }
-    .border-2{
-       
+    .intro p{
+        font-size: 15px;
+    
     }
+    .intro h2{
+        font-size: 20px;
+    }
+  
+  
     
 }
+@media screen and (max-width: 768px) {
+
+    .container-1 {
+     
+      
+    }
+  
+    .images-1 img {
+      flex: 1 100%;
+      text-align: center;
+    }
+  
+    .images-2 img {
+      flex: 1 100%;
+      text-align: center;
+      width: 250px;
+      height: 100px
+     
+    }
+  
+    .intro p{
+     font-size: 12px;
+    }
+    
+    .intro h2{
+        font-size: 16px;
+    }
+
+    
+  }
